# visual-similarity-search

./: .gitignore  .hfignore  Dockerfile  PROJECT_SUMMARY.md  README.md  commit.md  docker-compose.yml  gallery_filenames.json  pyproject.toml  requirements-dev.txt  requirements.txt  serve.py
.github/workflows/: deploy.yml
analysis/: error_analysis.ipynb
benchmarks/: latency_qps.py
data/: README.md
notebooks/: image_retrieval_algo-results.ipynb
result/: ablation_runs_final.csv  ablation_summary.csv  experiment_log.json  gallery.index  gallery_embeddings.npy  submission_clip.csv  submission_resnet152.csv
retrieval/: index.py  model.py  pipeline.py
tests/: test_serve.py
training/: hard_negative_mining.py
